--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,9 +8,13 @@ spring:
     database: H2
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
 
